<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pablo.pymtrack.CambiarDatosActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Gestiona tus datos"
        app:titleTextColor="@android:color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginTop="24dp"
        android:textSize="18dp"
        android:text="@string/introDatos"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/ingresoCorreo"
        android:backgroundTint="@color/colorLines"
        android:hint="@string/correoDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/contraseñaNueva"
        android:backgroundTint="@color/colorLines"
        android:hint="@string/cambioContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="cambioContraseñaOnClick"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/cambirBoton"
        android:textColor="@color/colorLines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
