<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pablo.pymtrack.IndexCategoriasActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Bienvenido Pymtrack"
        app:titleTextColor="@android:color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginTop="24dp"
        android:textSize="18dp"
        android:text="@string/bienvenida"
        android:id="@+id/textView" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="360dp"
        android:layout_height="130dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="hostalOnClik">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="123dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/hostal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/titulo_hostal"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="15dp"
                android:text="@string/descripcion_hostal" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="360dp"
        android:layout_height="130dp"
        android:layout_alignStart="@+id/cardView3"
        android:layout_below="@+id/cardView3"
        android:layout_marginTop="11dp"
        android:onClick="sushiOnClik"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="123dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/comida" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@+id/imageView1"
                android:text="@string/titulo_comida"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="15dp"
                android:text="@string/descripcion_comida" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginStart="22dp"
        android:layout_marginTop="17dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/gestionarDatos"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/cardView"
        android:layout_below="@+id/cardView"
        android:layout_marginStart="22dp"
        android:layout_marginTop="43dp"
        android:onClick="cambiarDatosOnClick"
        android:src="@drawable/cuenta"
        android:id="@+id/imageView2" />


</RelativeLayout>
